output/facebook/rocksdb/898.txt
```
db/db_test.cc:4780:10: error: moving a local object in a return statement prevents copy elision
      [-Werror,-Wpessimizing-move]
  return std::move(file_numbers);
         ^
db/db_test.cc:4780:10: note: remove std::move call here
  return std::move(file_numbers);
         ^~~~~~~~~~            ~
```

`-Wpessimizing-move` was introduced in clang 3.7.

